<resources>
    <string name="app_name">FoodTruck</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_library">Music Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending</string>
    <string name="explore">Explore</string>
    <string name="adult_content">Adult Content</string>
    <string name="english_only">English Only</string>
    <string name="top_rated">Top Rated</string>
    <string name="image_trans">Image_trans</string>
    <string name="search_hint_text">Search for any TV Show</string>
    <string name="bullet_symbol">•</string>
    <string name="cast">Cast</string>
    <string name="overview">Overview</string>
    <string name="crew">Crew</string>
</resources>