<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        tools:context=".presentation.details.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="snap|scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/details_movie_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:alpha="0.8"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/navigate_up"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/circular_shape"
                    android:padding="0dp"
                    app:backgroundTint="#A1505050"
                    app:icon="@drawable/ic_baseline_arrow_back_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@color/light_green"
                    app:layout_collapseMode="pin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fav_btn"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/circular_shape"
                    android:padding="0dp"
                    app:backgroundTint="@color/light_grey"
                    app:icon="@drawable/ic_baseline_favorite_border_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@color/light_green"
                    app:layout_collapseMode="pin" />

                <ProgressBar
                    android:id="@+id/img_pb"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/light_green"
                    app:layout_collapseMode="parallax" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"

                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/dark_grey"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_movie_name">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/details_movie_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.1"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_baseline_search_24" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/details_movie_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                app:layout_constraintStart_toStartOf="@+id/details_movie_overview"
                                app:layout_constraintTop_toBottomOf="@+id/details_movie_overview"
                                tools:text="12-10-2022" />

                            <TextView
                                android:id="@+id/textView5"
                                style="@style/bullet_symbol"
                                android:text="@string/bullet_symbol"
                                app:layout_constraintBottom_toBottomOf="@+id/details_movie_date"
                                app:layout_constraintStart_toEndOf="@+id/details_movie_date"
                                app:layout_constraintTop_toTopOf="@+id/details_movie_date"
                                app:layout_constraintVertical_bias="0.47000003" />

                            <TextView
                                android:id="@+id/details_movie_genres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="@color/white"
                                app:layout_constraintBottom_toBottomOf="@+id/details_movie_date"
                                app:layout_constraintStart_toEndOf="@+id/textView5"
                                app:layout_constraintTop_toTopOf="@+id/details_movie_date"
                                tools:text="Comedy, Action, Fantasy, Drama" />

                            <TextView
                                android:id="@+id/textView6"
                                style="@style/bullet_symbol"
                                android:layout_marginTop="4dp"
                                android:text="@string/bullet_symbol"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/details_movie_date" />

                            <TextView
                                android:id="@+id/details_movie_duration"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textColor="#C1C0C0"
                                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                                app:layout_constraintStart_toEndOf="@+id/textView6"
                                app:layout_constraintTop_toTopOf="@+id/textView6"
                                tools:text="1h 30m" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_14sdp"
                                android:text="@string/cast"
                                android:textColor="#EFECEC"
                                android:textSize="@dimen/_16ssp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="@+id/details_movie_date"
                                app:layout_constraintTop_toBottomOf="@+id/details_movie_duration" />

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/materialCardView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                app:cardBackgroundColor="@color/light_grey"
                                app:cardCornerRadius="@dimen/_5sdp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="@+id/textView8"
                                app:layout_constraintTop_toBottomOf="@id/textView8">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/details_cast_rv"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_5sdp"
                                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                                <ProgressBar
                                    android:id="@+id/cast_pb"
                                    style="?android:attr/progressBarStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:indeterminate="true"
                                    android:indeterminateTint="@color/light_green"
                                    app:layout_collapseMode="parallax" />
                            </com.google.android.material.card.MaterialCardView>

                            <TextView
                                android:id="@+id/tv10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/overview"
                                android:textColor="#EFECEC"
                                android:textSize="@dimen/_16ssp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/details_movie_overview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/tv10"
                                app:layout_constraintTop_toBottomOf="@id/tv10"
                                tools:text="Frank Martin puts the driving gloves." />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/crew"
                                android:textColor="#EFECEC"
                                android:textSize="@dimen/_16ssp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/details_crew_rv"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="@dimen/_5sdp"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView10" />

                            <ProgressBar
                                android:id="@+id/crew_pb"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:indeterminate="true"
                                android:indeterminateTint="@color/light_green"
                                app:layout_collapseMode="parallax"
                                app:layout_constraintBottom_toBottomOf="@+id/details_crew_rv"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/details_crew_rv" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/details_movie_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/frameLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="It's Spider Man" />

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:progress="10"
                        app:indicatorColor="@color/light_grey" />

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/details_movie_rate_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:progress="3"
                        app:indicatorColor="@color/light_green" />

                    <TextView
                        android:id="@+id/details_movie_rate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxLength="3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        tools:text="7.5" />
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>